# mcp-gateway-workshop

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  Makefile copy  README.md  SECURITY.md  docker-compose.yml  mkdocs copy 2.yml  mkdocs copy 3.yml  mkdocs copy.yml  mkdocs.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: docs_issue.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  feature.md
.github/workflows/: ci.yml  docs.yaml  gh-pages.yml  pre-commit.yml  release.yml
book/: book.epub  manuscript.md
book/kindle/: front-matter.md  toc.md
configs/adapters/: langflow_adapter.env
configs/gateway/: base.yaml  plugins.yaml  rbac.yaml  well-known.env
configs/observability/: otel.env
data/rag/: mini_corpus.md
data/sample_texts/: governance.txt  privacy.txt
docker/adapter/: Dockerfile
docker/agent/: Dockerfile
docker/base/: python.Dockerfile
docker/gateway/: Dockerfile
docs/: capstone.md  index.md  labs.md  part1-foundations.md  part2-labs.md  part3-capstone-theory.md  part4-capstone-build.md  preface.md  quickstart.md  syllabus.md  troubleshooting.md
docs/.overrides/: home.html
docs/appendices/: appendix-a-docling.md  appendix-b-verified-commands.md  appendix-c-api-cheatsheet.md  appendix-d-troubleshooting.md  appendix-e-screenshot-checklist.md  appendix-f-instructor-ros.md  appendix-g-kindle-tips.md
docs/assets/css/: wx-hero.css
docs/assets/js/: wx-hero.js
docs/ref/: crewai_map.md  langflow_map.md  observability.md  plugins.md  rbac.md
docs/snippets/: calculator_server.py  crew_agent_direct.py  httpbin_wrapper.py  langflow_adapter.py
labs/DAY1/: 00-environment-checks.md  01-quickstart-gateway.md  02-register-first-server.md  03-clients-and-cli.md  04-passthrough-wrapper.md  05-guardrails-rate-limiter.md
labs/DAY2/: 00-setup-and-prereqs.md  01-langflow-tool.md  02-expose-as-mcp-tool-server.md  03-crewai-agent.md  04-guardrails-secrets-rate-limit.md  05-rbac-and-obo.md  06-observability-trace.md  07-team-demos.md
scripts/: build_book.py  create_jwt.py  dump_logs.sh  generate_certs.sh  install.sh  seed_gateway.sh  verify_ports.sh
src/: README.md
src/mcpws/adapters/: langflow_adapter.py
src/mcpws/agents/: __init__.py  crew_agent.py  crew_agent_docling.py
src/mcpws/cli/: mcpws_cli.py
src/mcpws/servers/: calculator_server.py  docling_mcp_server.py  httpbin_wrapper.py
src/mcpws/tools/: chat_rag_client.py  gateway_summarize_tool.py  probe_langflow.py  trace_probe.py
src/mcpws/utils/: __init__.py  gateway_client.py  logging.py
tests/: test_calculator_server.py  test_crew_agent.py  test_gateway_client.py  test_langflow_adapter.py
