
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpws"
version = "0.1.0"
description = "MCP Gateway Workshop utilities (adapter, agent, CLI)"
authors = [{ name="Ruslan Magaña"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "requests",
    "pydantic>=2",
    "python-dotenv",
    "crewai",
]

[project.urls]
Homepage = "https://github.com/ruslanmv/mcp-gateway-workshop"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
