[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpws"
version = "0.1.0"
description = "MCP Gateway Workshop utilities (adapter, agent, CLI)"
authors = [{ name = "Ruslan Magaña" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

# Runtime dependencies for the workshop code
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "requests",
  "pydantic>=2",
  "python-dotenv",
  "crewai",
]

[project.urls]
Homepage = "https://github.com/ruslanmv/mcp-gateway-workshop"

# Optional dependency groups for docs and book builds
[project.optional-dependencies]
# Use this when building docs (MkDocs Material social plugin needs cairosvg).
docs = [
  "mkdocs>=1.6",
  "mkdocs-material[imaging]>=9.5",   # pulls in cairosvg, pillow, etc.
  "pymdown-extensions>=10.8",
  "markdown>=3.5",
]

# Use this for EPUB/PDF book builds (matches Makefile book targets)
book = [
  "ebooklib>=0.18",    # EPUB
  "markdown>=3.5",     # Markdown → HTML
  # Prefer WeasyPrint when available (pure-Python HTML → PDF). On Windows, it may be
  # easier to rely on the ReportLab fallback in scripts/build_book.py.
  "weasyprint>=62; platform_system != 'Windows'",
  "reportlab>=4.0",    # PDF fallback path
  "pillow>=10.0",      # image handling
]

# Dev/QA convenience (optional)
dev = [
  "ruff>=0.6",
  "black>=24.8",
  "mypy>=1.11",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "types-requests>=2.32",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
