[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpws"
version = "0.1.0"
description = "MCP Gateway Workshop utilities (adapter, agent, CLI)"
authors = [{ name = "Ruslan Magaña" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

# Runtime dependencies for all workshop code (servers, adapters, tools, agents)
dependencies = [
  # Web & models
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",

  # Core utilities
  "requests>=2.32",
  "pydantic>=2",
  "python-dotenv>=1.0",
  "PyJWT>=2.8",

  # Agents
  "crewai",

  # RAG stack (used by Docling appendix & labs)
  "chromadb>=0.5",
  "docling>=1.14",
  "ibm-generative-ai>=2.0",       
  "sentence-transformers>=2.7",
  "python-multipart>=0.0.9",

  # Optional CLI helper used by src/mcpws/cli/*
  "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/ruslanmv/mcp-gateway-workshop"

[project.optional-dependencies]
# Use this when building docs (MkDocs Material social plugin needs cairosvg).
docs = [
  "mkdocs>=1.6",
  "mkdocs-material[imaging]>=9.5",   # pulls in cairosvg, pillow, etc.
  "pymdown-extensions>=10.8",
  "markdown>=3.5",
]

# EPUB/PDF book builds (matches Makefile book targets)
book = [
  "ebooklib>=0.18",    # EPUB
  "markdown>=3.5",     # Markdown → HTML
  # Prefer WeasyPrint when available (pure-Python HTML → PDF)
  "weasyprint>=62; platform_system != 'Windows'",
  "reportlab>=4.0",    # PDF fallback path
  "pillow>=10.0",      # image handling
]

# If you want to install only the RAG dependencies on demand:
rag = [
  "chromadb>=0.5",
  "docling>=1.14",
  "ibm-generative-ai>=2.0",
  "sentence-transformers>=2.7",
  "python-multipart>=0.0.9",
]

# Dev/QA convenience
dev = [
  "ruff>=0.6",
  "black>=24.8",
  "mypy>=1.11",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "types-requests>=2.32",
  "httpx>=0.27",       
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
